--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
+/* TEST */
+
 /*DEBUG */
-span.test {
-    position: relative;
-    bottom: -70px;
+
+.slide-arrow {
+    font-size: 150%;
+
 }
 
-.debug [class*="col-"] {
-    background: pink;
-    height: 200px;
-    border: 1px solid black;
+.designed div.slide-arrow {
+    padding-top: calc(50% * 1.3);
+
+    /* rapporto immagine di circa 10 a 6.5 */
 }
+
+
 
 ul {
     padding-left: 0;
@@ -47,7 +52,6 @@ h4 {
 .thinner_cont {
     width: 90%;
     margin: auto;
-    /* questo credo verrà cambiato, preferendogli dare padding a contenuto colonne+media query */
 }
 
 main a {
@@ -60,7 +64,7 @@ main a {
 }
 
 .bg-blue {
-    background-color: blue;
+    background: linear-gradient(to right, #0035b1, #0048c6, #0035b1);
     color: white;
 }
 
@@ -218,13 +222,13 @@ h1 {
 
 /* Regions */
 /* da spostare su container ad hoc */
-.regions .row {
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
 .regions .row .row {
     border-bottom: 1px solid white;
+    margin: 15px 10px;
+}
+
+.regions .col-xs-7 {
+    color: #b3c3e7;
 }
 
 /* Feedbacks */
@@ -259,6 +263,10 @@ h1 {
 /* FOOTER */
 footer {
     background-color: #031c4ee2;
+    color: #a6adbd;
+}
+
+footer p.lighter {
     color: #8b94a9;
 }
 
