--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,21 @@
 
 .slide-arrow {
     font-size: 150%;
+    padding: 10px;
 
 }
 
-.designed div.slide-arrow {
-    padding-top: calc(50% * 1.3);
-
-    /* rapporto immagine di circa 10 a 6.5 */
+[class^="slide-"] {
+    display: inline-block;
+    vertical-align: middle;
 }
 
+.slide-content {
+    width: 50%;
+    margin: auto;
+    height: auto;
 
+}
 
 ul {
     padding-left: 0;
@@ -59,6 +64,10 @@ h4 {
 main a {
     color: #2285fd;
 
+}
+
+.dot-active {
+    background-color: blue;
 }
 
 .bg-grey {
