--- a/css/my_normalizer.css
+++ b/css/my_normalizer.css
@@ -13,3 +13,12 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+/* FONT-AWESOME */
+
+/* --STILL TESTING--
+
+    The more I look at it, the more it seems a REALLY bad idea,
+    but still.
+
+*/
