--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     color: #818ba2;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
+    min-width: 320px;
 }
 
 h2,
@@ -292,7 +293,7 @@ footer h3 {
 
 /* FIXED */
 .pesky-shark {
-    height: 150px;
+    /* height: 150px; */
     z-index: 1;
     position: fixed;
     bottom: 1%;
@@ -304,7 +305,7 @@ footer h3 {
     display: inline-block;
     width: 200px;
     padding: 10px;
-    height: 100px;
+    /* height: 100px; */
     background-color: white;
     position: relative;
     border-radius: 10px;
