--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,6 @@ footer h3 {
 
 
 /* Queries */
-/* TEST */
 
 @media screen and (max-width: 767px) {
     .logo-list li {
@@ -364,33 +363,12 @@ footer h3 {
         /* temo sia una soluzione stupida, tuttavia */
     }
 
+    body *:not(h1, h2) {
+        font-size: 100% !important;
+    }
+
     h1,
     h2 {
-        font-size: 190%;
+        font-size: 150% !important;
     }
-}
-
-
-
-
-
-.test-slide {
-    position: relative;
-}
-
-.pic {
-    height: 200px;
-    width: 300px;
-    border: 1px solid black;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.active:checked {
-    display: none;
-}
-
-.active:active {
-    display: none;
 }
